objects/EFD_Lasers__c.object
<CustomObject>
    <fields>
        <fullName>Installed_Date__c</fullName>
        <label>Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installed_EFD_Lasers_Type__c</fullName>
        <label>Installed EFD Lasers Type</label>
        <picklist>
            <picklistValues>
                <fullName>1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1940</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFD8500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MICR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <label>Installer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Laser_Install__c</fullName>
        <label>Laser Install</label>
        <referenceTo>Laser_Install__c</referenceTo>
        <relationshipName>Non_EFD_Lasers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EFD Lasers</label>
    <nameField>
        <displayFormat>EFL - {00000}</displayFormat>
        <label>EFD Lasers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EFD Lasers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>